Committing improvements to android system service code formatting + standards.