@@ -41,20 +41,14 @@ public class OTAServerConfig {
     private static final String MONTHLY_TAG = "monthly";
     private static final String TAG = "OTA_SC";
     private static final long DEFAULT_DELAY = 2592000000L;
-    private long delay;
     private URL updatePackageURL;
     private URL buildPropURL;
 
-    public OTAServerConfig(String productname) throws MalformedURLException {
-
-        if (loadConfigureFromFile(Constants.OTA_CONFIG_LOCATION, productname) == false) {
-            Log.i(TAG, "Loading default configuration for product " + productname + ".");
-            defaultConfigure(productname);
+    public OTAServerConfig(String productName) throws MalformedURLException {
+        if (!loadConfigureFromFile(Constants.OTA_CONFIG_LOCATION, productName)) {
+            Log.i(TAG, "Loading default configuration for product " + productName + ".");
+            defaultConfigure(productName);
         }
-    }
-
-    public long getDelay() {
-        return delay;
     }
 
     public boolean loadConfigureFromFile(String configFile, String product) {
@@ -77,7 +71,7 @@ public class OTAServerConfig {
             String portConfig = parser.getProp(PORT_CONFIG_STR);
             int port;
             if (portConfig != null) {
-                port = new Long(portConfig).intValue();
+                port = Long.valueOf(portConfig).intValue();
             } else {
                 Log.i(TAG, "Using default port " + Constants.DEFAULT_OTA_SERVER_PORT);
                 port = Constants.DEFAULT_OTA_SERVER_PORT;
@@ -95,8 +89,8 @@ public class OTAServerConfig {
             }
             String buildMonthlyCheck = parser.getProp(MONTHLY_TAG);
 
-            String fileAddress = new String(product + "/" + product + updateFileName);
-            String buildConfigAddress = new String(product + "/" + buildFile);
+            String fileAddress = product + "/" + product + updateFileName;
+            String buildConfigAddress = product + "/" + buildFile;
 
             // Supported url protocols are ftp, http, https, jar, file
             updatePackageURL = new URL(protocol, server, port, fileAddress);
@@ -104,7 +98,7 @@ public class OTAServerConfig {
 
             Log.d(TAG, "Package is at URL: " + updatePackageURL);
             Log.d(TAG, "Build Property is at URL: " + buildPropURL);
-
+            long delay;
             if (buildMonthlyCheck != null) {
                 Calendar calendar = Calendar.getInstance();
                 long checkTime = Long.parseLong(buildMonthlyCheck);
@@ -114,8 +108,6 @@ public class OTAServerConfig {
                     delay = DEFAULT_DELAY;
                     parser.setProp(MONTHLY_TAG, Long.toString(delay));
                 }
-            } else {
-                delay = Long.MIN_VALUE;
             }
 
         } catch (IOException ie) {
@@ -129,8 +121,8 @@ public class OTAServerConfig {
     }
 
     public void defaultConfigure(String product) throws MalformedURLException {
-        String fileAddress = new String(product + "/" + product + Constants.DEFAULT_OTA_ZIP_FILE);
-        String buildConfigAddress = new String(product + "/" + Constants.DEFAULT_OTA_BUILD_PROP_FILE);
+        String fileAddress = product + "/" + product + Constants.DEFAULT_OTA_ZIP_FILE;
+        String buildConfigAddress = product + "/" + Constants.DEFAULT_OTA_BUILD_PROP_FILE;
         updatePackageURL = new URL(Constants.DEFAULT_OTA_SERVER_PROTOCOL, Constants.DEFAULT_OTA_SERVER_ADDRESS,
                                    Constants.DEFAULT_OTA_SERVER_PORT, fileAddress);
         buildPropURL = new URL(Constants.DEFAULT_OTA_SERVER_PROTOCOL, Constants.DEFAULT_OTA_SERVER_ADDRESS, Constants.
